<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hazin.implicitintent.MainActivity"
    android:orientation="vertical">

   <android.support.v7.widget.AppCompatButton
       android:id="@+id/share_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/share_name"/>

   <android.support.v7.widget.AppCompatButton
       android:id="@+id/navigate_map"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/navigate_map"/>

   <android.support.v7.widget.AppCompatButton
       android:id="@+id/phone_call"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/phone_call"/>

   <android.support.v7.widget.AppCompatButton
       android:id="@+id/sending_mail"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/sending_mail"/>

   <android.support.v7.widget.AppCompatButton
       android:id="@+id/take_picture"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/take_picture"/>

   <android.support.v7.widget.AppCompatButton
       android:id="@+id/select_picture"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/select_picture"/>

   <ImageView
       android:id="@+id/image_from_camera"
       android:layout_width="100dp"
       android:layout_height="200dp"
       android:layout_marginTop="16dp"
       android:layout_gravity="center_horizontal"/>
</LinearLayout>
